# agentic-ai-contract-compliance

./: .gitignore  OVERVIEW.md  README.md  main.py  pyproject.toml
modules/: pyproject.toml  vector_store.py
modules/agents/: document_processor.py  orchestration_agent.py  research_agent.py
modules/tools/: compliance_checker_tool.py  contract_analyzer_tool.py  web_search_tool.py
sample_data/: rules.txt
